--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
     "beberlei/assert": "^2.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7"
+    "phpunit/phpunit": "^5.7",
+    "sebastian/phpcpd": "^2.0",
+    "phpmd/phpmd" : "^2.3",
+    "squizlabs/php_codesniffer": "^2.5"
   },
   "scripts": {
     "post-root-package-install": [
