--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,8 @@
   },
   "require": {
     "php": "^7.1",
-    "beberlei/assert": "^2.4"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^6.0",
-    "sebastian/phpcpd": "^2.0",
-    "phpmd/phpmd" : "^2.6",
-    "squizlabs/php_codesniffer": "^2.5"
+    "beberlei/assert": "^2.4",
+    "peterrehm/php-test": "^0.1"
   },
   "scripts": {
     "post-root-package-install": [
