--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
   },
   "require": {
     "php": "^7.1",
-    "beberlei/assert": "^2.4",
+    "beberlei/assert": "^2.4"
+  },
+  "require-dev": {
     "peterrehm/php-test": "^0.1"
   },
   "scripts": {
