--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "psr-4": { "peterrehm\\TimeProfiles\\": "src/" }
   },
   "require": {
-    "php": "^7.1",
+    "php": ">=7.4",
     "beberlei/assert": "^2.4"
   },
   "require-dev": {
